--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/native-stack": "^7.3.16",
     "axios": "^1.13.4",
     "expo": "~54.0.33",
-    "expo-av": "^16.0.8",
+    "expo-audio": "^1.1.1",
     "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.11",
